--- a/Heroes-app/src/app/heroes/heroes.component.css
+++ b/Heroes-app/src/app/heroes/heroes.component.css
@@ -1,3 +1,5 @@
 
 h2 {text-align: center;}
 div {text-align: center; background-color: tomato}
+
+/* body {text-align: center;background-color: teal} */
