Routing and Navigation

--- a/Heroes-app/src/app/app.component.html
+++ b/Heroes-app/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>{{Heroes_title}}</h1>
-<app-heroes></app-heroes>
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <br>
+    <a routerLink="/heroes">Click here to see Heroes</a>
+  </nav>
+  <!-- <nav>
+    <a routerLink="home/">Click here to Main</a>
+  </nav> -->
+<router-outlet></router-outlet>
 <app-show-message></app-show-message>
